Open necessary packages to the unnamed module
.. to avoid warnings due to Felix accessing non-public apis with
  reflection.
+ Show all "Illegal reflective access" warnings.